# SimpleNN

./: .gitignore  CMakeLists.txt  README.md
examples/mnist/: CMakeLists.txt  LeNet.net  LeNet.weights  recognition.cpp  recognition_camera.cpp  test.cpp  train.cpp  train_conv.cpp
examples/mnist/dataset/: generate_csv.py
include/: SimpleNN.hpp
include/data/: csv.hpp  exceptions.hpp  json.hpp
include/functions/: common.hpp  functions.hpp  io.hpp
include/layers/: Affine.hpp  Convolution.hpp  LRelu.hpp  Layer.hpp  MaxPooling.hpp  Relu.hpp  Sigmoid.hpp  Softmax.hpp
include/loss/: CrossEntropyLoss.hpp  Loss.hpp  SoftmaxWithLoss.hpp
include/nets/: Dataset.hpp  Label.hpp  Sequential.hpp
include/optimizers/: AdaGrad.hpp  GradDescent.hpp  Momentum.hpp  Optimizer.hpp
models/LeNet/: LeNet.hpp
models/SimpleNet/: SimpleNet.hpp
src/: CMakeLists.txt
src/data/: CMakeLists.txt  csv.cpp  json.cpp
src/functions/: CMakeLists.txt  functions.cpp
src/layers/: Affine.cpp  CMakeLists.txt  Convolution.cpp  LRelu.cpp  Layer.cpp  MaxPooling.cpp  Relu.cpp  Sigmoid.cpp  Softmax.cpp
src/loss/: CMakeLists.txt  CrossEntropyLoss.cpp  Loss.cpp  SoftmaxWithLoss.cpp
src/nets/: CMakeLists.txt  Dataset.cpp  Sequential.cpp
src/optimizers/: AdaGrad.cpp  CMakeLists.txt  GradDescent.cpp  Momentum.cpp  Optimizer.cpp
test/: CMakeLists.txt  test_functions.cpp  test_io.cpp  test_io.csv  test_layers.cpp  test_matrix.cpp
util/Matrix/: Matrix.hpp  exceptions.hpp
